--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://starexchmarketing_db_user:Sj5uXqm75NKHlCOw@cluster0.vghaupc.mongodb.net/vendorDB
 PORT=5000
 JWT_SECRET=bb7ed2d3c74c621d4e8bc49be4eb29a1
-REACT_APP_API_URL=https://vendor-frontend-omega.vercel.app//api/auth
-REACT_APP_API_URL=https://vendor-frontend-omega.vercel.app//api
-REACT_APP_API_URL=https://vendor-frontend-omega.vercel.app//
+REACT_APP_API_URL=https://vendor-frontend-omega.vercel.app/api/auth
+REACT_APP_API_URL=https://vendor-frontend-omega.vercel.app/api
+REACT_APP_API_URL=https://vendor-frontend-omega.vercel.app/
