Fixed API_BASE_URL issue

--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 MONGO_URI=mongodb+srv://starexchmarketing_db_user:Sj5uXqm75NKHlCOw@cluster0.vghaupc.mongodb.net/vendorDB
 PORT=5000
-<<<<<<< HEAD
+
 JWT_SECRET=bb7ed2d3c74c621d4e8bc49be4eb29a1
-=======
+
 JWT_SECRET=bb7ed2d3c74c621d4e8bc49be4eb29a1
-REACT_APP_API_URL=https://winexch.blog/api/auth
-REACT_APP_API_URL=https://winexch.blog/api
-REACT_APP_API_URL=https://winexch.blog/
->>>>>>> a92a8c52c363d84363602c48153d8d524195a9a0
+REACT_APP_API_URL=https://vrm.winexch.blog/api/auth
+REACT_APP_API_URL=https://vrm.winexch.blog/api
+REACT_APP_API_URL=https://vrm.winexch.blog/
