Your descriptive commit message

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ JWT_SECRET=bb7ed2d3c74c621d4e8bc49be4eb29a1
 JWT_SECRET=bb7ed2d3c74c621d4e8bc49be4eb29a1
 REACT_APP_API_URL=https://vrm.winexch.blog/api/auth
 REACT_APP_API_URL=https://vrm.winexch.blog/api
-REACT_APP_API_URL=https://vrm.winexch.blog
+REACT_APP_API_URL=https://vrm.winexch.blog/
